update tribute page thumbnail

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </a>
 
             <a href="https://codepen.io/brankin111/full/bGEXQpM" target="_blank" class="project project-tile">
-                <img src="https://assets.codepen.io/4853845/internal/screenshots/pens/bGEXQpM.default.png?fit=cover&format=auto&ha=false&height=540&quality=75&v=2&version=1597006081&width=960" class="project-image" alt="project" />
+                <img src="https://assets.codepen.io/4853845/internal/screenshots/pens/bGEXQpM.default.png?fit=cover&format=auto&ha=false&height=180&quality=75&v=2&version=1602374340&width=320" class="project-image" alt="project" />
                 <p class="project-title">
                     Tribute Page
                 </p>
@@ -90,6 +90,4 @@
         </div>
     </section>
 
-</body>
-
-</html>
+</body></html>
