changed welcome section title

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <section id="welcome-section" class="welcome-section">
         <h1 id="main-heading">Brandon Rankin</h1>
-        <p>aspiring software developer</p>
+        <p>Front-End Web Developer</p>
     </section>
 
     <section id="projects" class="projects-section">
