changed portfolio color scheme. added subtle GSAP animations in main.js

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     </header>
 
     <section id="welcome-section" class="welcome-section">
-        <h1 id="main-heading">Brandon Rankin</h1>
-        <p>Front-End Web Developer</p>
+        <h1 id="main-heading" class="gsap-heading">Brandon Rankin</h1>
+        <p class="gsap-heading">Front-End Web Developer</p>
     </section>
 
     <section id="projects" class="projects-section">
@@ -43,14 +43,14 @@
                 </p>
             </a>
 
-            <a href="https://codepen.io/brankin111/full/abdeRPg" target="_blank" class="project project-tile">
+            <a href="https://brankin111.github.io/JS-Calculator/" target="_blank" class="project project-tile">
                 <img src="https://assets.codepen.io/4853845/internal/screenshots/pens/abdeRPg.default.png?fit=cover&format=auto&ha=false&height=540&quality=75&v=2&version=1597039476&width=960" class="project-image" alt="project" />
                 <p class="project-title">
                     Javascript Calculator
                 </p>
             </a>
 
-            <a href="https://codepen.io/brankin111/full/OJNyEEr" target="_blank" class="project project-tile">
+            <a href="https://brankin111.github.io/MSI-Landing-Page/" target="_blank" class="project project-tile">
                 <img src="https://assets.codepen.io/4853845/internal/screenshots/pens/OJNyEEr.default.png?fit=cover&format=auto&ha=false&height=180&quality=75&v=2&version=1597358048&width=320" class="project-image" alt="project" />
                 <p class="project-title">
                     MSI Landing Page
@@ -90,8 +90,8 @@
             <a href="mailto:brankin111@gmail.com" target="_blank" class="contact-details"><i class="fa fa-envelope" aria-hidden="true"></i> Gmail</a>
         </div>
     </section>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/ScrollTrigger.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="main.js"></script>
-</body>
-
-</html>
+</body></html>
