--- a/index.html
+++ b/index.html
@@ -36,44 +36,44 @@
         <h2 class="projects-section-header">My Projects</h2>
 
         <div class="projects-grid">
+            <a href="https://brankin111.github.io/MSI-Landing-Page/" target="_blank" class="project project-tile">
+                <img src="https://assets.codepen.io/4853845/internal/screenshots/pens/OJNyEEr.default.png?fit=cover&format=auto&ha=false&height=180&quality=75&v=2&version=1597358048&width=320" class="project-image" alt="project" />
+                <p class="project-title" id="project-title-1">
+                    MSI Landing Page
+                </p>
+            </a>
+
             <a href="https://codepen.io/brankin111/full/oNbKQxL" target="_blank" class="project project-tile">
                 <img src="https://assets.codepen.io/4853845/internal/screenshots/pens/oNbKQxL.default.png?fit=cover&format=auto&ha=false&height=540&quality=75&v=2&version=1596994555&width=960" class="project-image" alt="project" />
-                <p class="project-title">
+                <p class="project-title" id="project-title-2">
                     Survey Form
                 </p>
             </a>
 
             <a href="https://brankin111.github.io/JS-Calculator/" target="_blank" class="project project-tile">
                 <img src="https://assets.codepen.io/4853845/internal/screenshots/pens/abdeRPg.default.png?fit=cover&format=auto&ha=false&height=540&quality=75&v=2&version=1597039476&width=960" class="project-image" alt="project" />
-                <p class="project-title">
+                <p class="project-title" id="project-title-3">
                     Javascript Calculator
-                </p>
-            </a>
-
-            <a href="https://brankin111.github.io/MSI-Landing-Page/" target="_blank" class="project project-tile">
-                <img src="https://assets.codepen.io/4853845/internal/screenshots/pens/OJNyEEr.default.png?fit=cover&format=auto&ha=false&height=180&quality=75&v=2&version=1597358048&width=320" class="project-image" alt="project" />
-                <p class="project-title">
-                    MSI Landing Page
                 </p>
             </a>
 
             <a href="https://codepen.io/brankin111/full/bGEXQpM" target="_blank" class="project project-tile">
                 <img src="https://assets.codepen.io/4853845/internal/screenshots/pens/bGEXQpM.default.png?fit=cover&format=auto&ha=false&height=180&quality=75&v=2&version=1602374340&width=320" class="project-image" alt="project" />
-                <p class="project-title">
+                <p class="project-title" id="project-title-4">
                     Tribute Page
                 </p>
             </a>
 
             <a href="https://codepen.io/brankin111/full/abNovvo" target="_blank" class="project project-tile">
                 <img src="https://assets.codepen.io/4853845/internal/screenshots/pens/abNovvo.default.png?fit=cover&format=auto&ha=false&height=360&quality=75&v=2&version=1597006391&width=640" class="project-image" alt="project" />
-                <p class="project-title">
+                <p class="project-title" id="project-title-5">
                     Technical Documentaion Page
                 </p>
             </a>
 
             <a href="https://codepen.io/brankin111/full/zYrgJdd" target="_blank" class="project project-tile">
                 <img src="https://assets.codepen.io/4853845/internal/screenshots/pens/zYrgJdd.default.png?fit=cover&format=auto&ha=true&height=180&quality=75&v=2&version=1597005820&width=320" class="project-image" alt="project" />
-                <p class="project-title">
+                <p class="project-title" id="project-title-6">
                     Product Landing Page
                 </p>
             </a>
