added more conctact links in index.html and adjusted breakpoints in responsive.css

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Personal Portfolio</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
@@ -18,7 +19,7 @@
                     <a href="#welcome-section">About Me</a>
                 </li>
                 <li>
-                    <a href="#projects">Projects</a>
+                    <a href="#projects">My Work</a>
                 </li>
                 <li>
                     <a href="#contact">Contacts</a>
@@ -33,7 +34,7 @@
     </section>
 
     <section id="projects" class="projects-section">
-        <h2 class="projects-section-header">My Projects</h2>
+        <h2 class="projects-section-header">My Work</h2>
 
         <div class="projects-grid">
             <a href="https://brankin111.github.io/MSI-Landing-Page/" target="_blank" class="project project-tile">
@@ -85,9 +86,11 @@
         <h2 class="contact-section-header">Contacts</h2>
 
         <div class="contact-links">
+            <a href="https://www.linkedin.com/in/brankin111" target="_blank" class="contact-details"><i class="fa fa-linkedin-square" aria-hidden="true"></i> LinkedIn</a>
             <a href="https://github.com/Brankin111" target="_blank" class="contact-details" id="profile-link"><i class="fa fa-github" aria-hidden="true"></i> GitHub</a>
             <a href="https://codepen.io/brankin111" target="_blank" class="contact-details"><i class="fa fa-codepen" aria-hidden="true"></i> CodePen</a>
             <a href="mailto:brankin111@gmail.com" target="_blank" class="contact-details"><i class="fa fa-envelope" aria-hidden="true"></i> Gmail</a>
+            <a href="https://www.facebook.com/brankin3" target="_blank" class="contact-details"><i class="fa fa-facebook-square" aria-hidden="true"></i> Facebook</a>
         </div>
     </section>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
