updated thumbnail for Code Louisville App in index.html

--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
                 </p>
             </a>
 
-            <a href="https://codepen.io/brankin111/full/bGEXQpM" target="_blank" class="project project-tile">
-                <img src="https://assets.codepen.io/4853845/internal/screenshots/pens/bGEXQpM.default.png?fit=cover&format=auto&ha=false&height=540&quality=75&v=2&version=1606785201&width=960" class="project-image" alt="project" />
+            <a href="https://brankin111.github.io/Code-Louisville-Application-Form/" target="_blank" class="project project-tile">
+                <img src="thumbnails/thumbnail-4.png" class="project-image" alt="project" />
                 <p class="project-title" id="project-title-4">
-                    Tribute Page
+                    Code Louisville Application
                 </p>
             </a>
 
