added thumbnail images for all projects

--- a/index.html
+++ b/index.html
@@ -38,21 +38,21 @@
 
         <div class="projects-grid">
             <a href="https://brankin111.github.io/MSI-Landing-Page/" target="_blank" class="project project-tile">
-                <img src="https://assets.codepen.io/4853845/internal/screenshots/pens/OJNyEEr.default.png?fit=cover&format=auto&ha=false&height=540&quality=75&v=2&version=1606788432&width=960" class="project-image" alt="project" />
+                <img src="thumbnails/thumbnail-1.png" class="project-image" alt="project" />
                 <p class="project-title" id="project-title-1">
                     MSI Landing Page
                 </p>
             </a>
 
             <a href="https://codepen.io/brankin111/full/oNbKQxL" target="_blank" class="project project-tile">
-                <img src="https://assets.codepen.io/4853845/internal/screenshots/pens/oNbKQxL.default.png?fit=cover&format=auto&ha=false&height=540&quality=75&v=2&version=1601226156&width=960" class="project-image" alt="project" />
+                <img src="thumbnails/thumbnail-2.png" class="project-image" alt="project" />
                 <p class="project-title" id="project-title-2">
                     Survey Form
                 </p>
             </a>
 
             <a href="https://brankin111.github.io/JS-Calculator/" target="_blank" class="project project-tile">
-                <img src="https://assets.codepen.io/4853845/internal/screenshots/pens/abdeRPg.default.png?fit=cover&format=auto&ha=false&height=540&quality=75&v=2&version=1599354957&width=960" class="project-image" alt="project" />
+                <img src="thumbnails/thumbnail-3.png" class="project-image" alt="project" />
                 <p class="project-title" id="project-title-3">
                     Javascript Calculator
                 </p>
@@ -66,14 +66,14 @@
             </a>
 
             <a href="https://codepen.io/brankin111/full/abNovvo" target="_blank" class="project project-tile">
-                <img src="https://assets.codepen.io/4853845/internal/screenshots/pens/abNovvo.default.png?fit=cover&format=auto&ha=false&height=540&quality=75&v=2&version=1601613625&width=960" class="project-image" alt="project" />
+                <img src="thumbnails/thumbnail-5.png" class="project-image" alt="project" />
                 <p class="project-title" id="project-title-5">
                     Technical Documentaion Page
                 </p>
             </a>
 
             <a href="https://codepen.io/brankin111/full/zYrgJdd" target="_blank" class="project project-tile">
-                <img src="https://assets.codepen.io/4853845/internal/screenshots/pens/zYrgJdd.default.png?fit=cover&format=auto&ha=true&height=540&quality=75&v=2&version=1603396544&width=960" class="project-image" alt="project" />
+                <img src="thumbnails/thumbnail-6.png" class="project-image" alt="project" />
                 <p class="project-title" id="project-title-6">
                     Product Landing Page
                 </p>
