--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <a href="https://codepen.io/brankin111/full/oNbKQxL" target="_blank" class="project project-tile">
                 <img src="thumbnails/thumbnail-2.png" class="project-image" alt="project" />
                 <p class="project-title" id="project-title-2">
-                    Survey Form
+                    Free Code Camp Survey
                 </p>
             </a>
 
