fixed gramatical error

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <a href="https://codepen.io/brankin111/full/abNovvo" target="_blank" class="project project-tile">
                 <img src="thumbnails/thumbnail-5.png" class="project-image" alt="project" />
                 <p class="project-title" id="project-title-5">
-                    Technical Documentaion Page
+                    Technical Documentation Page
                 </p>
             </a>
 
