--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </p>
             </a>
 
-            <a href="https://codepen.io/brankin111/full/oNbKQxL" target="_blank" class="project project-tile">
+            <a href="https://brankin111.github.io/Free-Code-Camp-Survey/" target="_blank" class="project project-tile">
                 <img src="thumbnails/thumbnail-2.png" class="project-image" alt="project" />
                 <p class="project-title" id="project-title-2">
                     Free Code Camp Survey
@@ -65,7 +65,7 @@
                 </p>
             </a>
 
-            <a href="https://codepen.io/brankin111/full/abNovvo" target="_blank" class="project project-tile">
+            <a href="https://brankin111.github.io/Technical-Documentation-Page/" target="_blank" class="project project-tile">
                 <img src="thumbnails/thumbnail-5.png" class="project-image" alt="project" />
                 <p class="project-title" id="project-title-5">
                     Technical Documentation Page
